Add folder tasks endpoint
